refactor menuEditor to hooks

--- a/plugins/menu-editor/admin/src/translations/cs.json
+++ b/plugins/menu-editor/admin/src/translations/cs.json
@@ -4,5 +4,7 @@
   "EditForm.remove": "Odstranit",
   "EditForm.add": "Přidat",
   "EditForm.addNewMenu": "Přidat nové menu",
-  "EditForm.chooseMenu": "Vybrat menu"
+  "EditForm.chooseMenu": "Vybrat menu",
+  "EditForm.editMode": "Editovat",
+  "EditForm.cancelEditMode": "Zahodit změny"
 }
