--- a/plugins/menu-editor/admin/src/translations/en.json
+++ b/plugins/menu-editor/admin/src/translations/en.json
@@ -1,10 +1,10 @@
 {
   "ConfigPage.description": "Edit menus here",
   "ConfigPage.title": "Menu - Editor",
-  "EditForm.remove": "Remove",
-  "EditForm.add": "Add",
-  "EditForm.addNewMenu": "Add new menu",
-  "EditForm.chooseMenu": "Choose menu",
-  "EditForm.editMode": "Edit",
-  "EditForm.cancelEditMode": "Cancel"
+  "MenuEditor.remove": "Remove",
+  "MenuEditor.add": "Add",
+  "MenuEditor.addNewMenu": "Add new menu",
+  "MenuEditor.chooseMenu": "Choose menu",
+  "MenuEditor.editMode": "Edit",
+  "MenuEditor.cancelEditMode": "Cancel"
 }
