--- a/plugins/menu-editor/admin/src/translations/cs.json
+++ b/plugins/menu-editor/admin/src/translations/cs.json
@@ -1,6 +1,7 @@
 {
   "ConfigPage.description": "Zde lze editovat menu",
   "ConfigPage.title": "Menu - Editor",
+  "ConfigPage.switchToEditMode": "Přepni do edit módu",
   "MenuEditor.remove": "Odstranit",
   "MenuEditor.add": "Přidat",
   "MenuEditor.addNewMenu": "Přidat nové menu",
