--- a/plugins/menu-editor/admin/src/translations/en.json
+++ b/plugins/menu-editor/admin/src/translations/en.json
@@ -1,7 +1,7 @@
 {
-  "ConfigPage.description": "Edit menus here",
-  "ConfigPage.title": "Menu - Editor",
-  "ConfigPage.switchToEditMode": "Switch to edit mode",
+  "MenuEditor.description": "Edit menus here",
+  "MenuEditor.title": "Menu - Editor",
+  "MenuEditor.switchToEditMode": "Switch to edit mode",
   "MenuEditor.remove": "Remove",
   "MenuEditor.add": "Add",
   "MenuEditor.addNewMenu": "Add new menu",
