CODE: Improve UI, implement editMode state, Send correct 'PUT' for save data to DB.

--- a/plugins/menu-editor/admin/src/translations/cs.json
+++ b/plugins/menu-editor/admin/src/translations/cs.json
@@ -1,4 +1,5 @@
 {
+  "MenuEditor.dataSaved": "Data uložena",
   "MenuEditor.description": "Nástroj pro editaci hierarchie menu",
   "MenuEditor.title": "Menu - Editor",
   "MenuEditor.switchToEditMode": "Přepni do edit módu",
