--- a/plugins/menu-editor/admin/src/translations/en.json
+++ b/plugins/menu-editor/admin/src/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "MenuEditor.dataSaved": "Data Saved",
   "MenuEditor.description": "Edit menus here",
   "MenuEditor.title": "Menu - Editor",
   "MenuEditor.switchToEditMode": "Switch to edit mode",
