--- a/plugins/menu-editor/admin/src/translations/cs.json
+++ b/plugins/menu-editor/admin/src/translations/cs.json
@@ -1,6 +1,9 @@
 {
 
   "MenuEditor.addNewItem": "Přidat novou stránku",
+  "MenuEditor.yes": "Ano",
+  "MenuEditor.no": "Ne",
+  "MenuEditor.confirmSaveStructure": "Uložit aktualní stav struktury?",
   "MenuEditor.addNewRelatedItem": "Přidat nový odkaz na stránku",
   "MenuEditor.dataSaved": "Data uložena",
   "MenuEditor.description": "Nástroj pro editaci hierarchie menu",
